crates/inertia-axum-macros/tests/ui/fail/missing_component.rs
use inertia_axum_macros::InertiaPage;

#[derive(InertiaPage)]
struct Missing { value: u32 }

fn main() {}
